# MESA_DuneAgents

./: .gitignore  README.md  pyproject.toml  sensitivity.py  summary.csv
figures/: A1_heatmap_calving_rate.html  A5_collision_fraction_unimodal.html  D3_pairplot.html
notebooks/: diagnostico_db.ipynb  test.ipynb
params/: paper_2023_grl.json  paper_2024_esd.json
scripts/: build_summary.py  generate_demo_data.py  rebuild_summary.py  run_from_json.py  run_grid.py  run_missing.py  run_storage.py
src/: collision_rules.py  dune_agent.py  dune_swarm.py  flux_physics.py  gamma_threshold.py  params_loader.py  wind_regimes.py
tests/: test_bayesian.py  test_dune_agent.py  test_smoke.py  testresults.txt
visualization/: app.py
visualization/real_time/: layout.py
visualization/shared/: callbacks.py  plots.py
visualization/stored_results/: layout.py
